# flow

./: Cargo.toml
crates/activate/: Cargo.toml
crates/agent/: Cargo.toml
crates/allocator/: Cargo.toml
crates/assemble/: Cargo.toml
crates/async-process/: Cargo.toml
crates/automations/: Cargo.toml
crates/avro/: Cargo.toml
crates/billing-integrations/: Cargo.toml
crates/billing-types/: Cargo.toml
crates/bindings/: Cargo.toml
crates/cgo/: Cargo.toml
crates/config-encryption/: Cargo.toml
crates/connector-init/: Cargo.toml
crates/control-plane-api/: Cargo.toml
crates/coroutines/: Cargo.toml
crates/data-plane-controller/: Cargo.toml
crates/dekaf/: Cargo.toml
crates/dekaf-connector/: Cargo.toml
crates/derive/: Cargo.toml
crates/derive-python/: Cargo.toml
crates/derive-sqlite/: Cargo.toml
crates/derive-typescript/: Cargo.toml
crates/doc/: Cargo.toml
crates/e2e-support/: Cargo.toml
crates/extractors/: Cargo.toml
crates/flow-client/: Cargo.toml
crates/flow-client-next/: Cargo.toml
crates/flow-web/: Cargo.toml
crates/flow_cli_common/: Cargo.toml
crates/flowctl/: Cargo.toml
crates/gazette/: Cargo.toml
crates/iam-auth/: Cargo.toml
crates/json/: Cargo.toml
crates/labels/: Cargo.toml
crates/librocks-exp/: Cargo.toml
crates/locate-bin/: Cargo.toml
crates/migrate/: Cargo.toml
crates/models/: Cargo.toml
crates/notifications/: Cargo.toml
crates/oidc-discovery-server/: Cargo.toml
crates/ops/: Cargo.toml
crates/parser/: Cargo.toml
crates/proto-build/: Cargo.toml
crates/proto-flow/: Cargo.toml
crates/proto-gazette/: Cargo.toml
crates/proto-grpc/: Cargo.toml
crates/publisher/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime-next/: Cargo.toml
crates/runtime-sidecar/: Cargo.toml
crates/runtime/src/: container.rs
crates/runtime/src/materialize/: connector.rs
crates/service-kit/: Cargo.toml
crates/shuffle/: Cargo.toml
crates/simd-doc/: Cargo.toml
crates/sources/: Cargo.toml
crates/tables/: Cargo.toml
crates/tokens/: Cargo.toml
crates/tuple/: Cargo.toml
crates/unseal/: Cargo.toml
crates/validation/: Cargo.toml
