[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "activate"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
assemble = { path = "../assemble" }
gazette = { path = "../gazette" }
labels = { path = "../labels" }
models = { path = "../models" }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }

anyhow = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
build = { path = "../build" }
doc = { path = "../doc" }
extractors = { path = "../extractors" }
tables = { path = "../tables" }

insta = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
