[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "allocator"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
jemalloc-ctl = { workspace = true }
jemallocator = { workspace = true }
lazy_static = { workspace = true }
