[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "assemble"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
doc = { path = "../doc" }
json = { path = "../json" }
labels = { path = "../labels" }
models = { path = "../models" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
tables = { path = "../tables" }

bytes = { workspace = true }
fxhash = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
pbjson-types = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
superslice = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]

insta = { workspace = true }
