[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "async-process"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libc = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
