[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "automations"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
coroutines = { path = "../coroutines" }
models = { path = "../models", features = ["sqlx-support"] }

anyhow = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
