[package]
name = "billing-integrations"
# The version here is ignored for release builds. During releases, this is instead set by the env
# variable FLOW_VERSION, based on the git tag.
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stripe = { workspace = true }
billing-types = { path = "../billing-types" }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
num-format = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
