[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "billing-types"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, optional = true }
async-stripe = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[features]
async-graphql = ["dep:async-graphql"]
default = []
