[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "bindings"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
allocator = { path = "../allocator" }
cgo = { path = "../cgo" }
derive = { path = "../derive" }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
runtime = { path = "../runtime" }
runtime-next = { path = "../runtime-next" }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }
