[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "cgo"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]

proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }

anyhow = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_json = { workspace = true }
