[package]
edition = "2024"
name = "config-encryption"
version = "0.1.0"

[[bin]]
name = "flow-config-encryption"
path = "src/main.rs"

[dependencies]
async-process = { path = "../async-process" }
doc = { path = "../doc" }
json = { path = "../json" }

aide = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
