[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "connector-init"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "flow-connector-init"
path = "src/main.rs"

[dependencies]
async-process = { path = "../async-process" }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
proto-grpc = { path = "../proto-grpc", features = ["capture_server", "derive_server", "materialize_server", "flow_server"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
