[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "coroutines"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures-core = { workspace = true }
pin-project-lite = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
tokio = { workspace = true }
