
[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "dekaf-connector"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
avro = { path = "../avro" }
coroutines = { path = "../coroutines" }
models = { path = "../models" }
proto-flow = { path = "../proto-flow" }
unseal = { path = "../unseal" }

anyhow = { workspace = true }
futures = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
