[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "derive-sqlite"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
doc = { path = "../doc" }
extractors = { path = "../extractors" }
json = { path = "../json" }
proto-flow = { path = "../proto-flow" }
simd-doc = { path = "../simd-doc" }

anyhow = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
