[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "derive"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
allocator = { path = "../allocator" }
cgo = { path = "../cgo" }
doc = { path = "../doc" }
extractors = { path = "../extractors" }
json = { path = "../json" }
models = { path = "../models" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
simd-doc = { path = "../simd-doc" }
tables = { path = "../tables" }
tuple = { path = "../tuple" }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prost = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
