[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "e2e-support"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
async-process = { path = "../async-process" }
gazette = { path = "../gazette" }
proto-gazette = { path = "../proto-gazette" }
proto-grpc = { path = "../proto-grpc" }
publisher = { path = "../publisher" }
tokens = { path = "../tokens" }

anyhow = { workspace = true }
libc = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
build = { path = "../build" }
models = { path = "../models" }

futures = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
