[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "extractors"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
doc = { path = "../doc" }
proto-flow = { path = "../proto-flow" }

serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
