[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "flow-client"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[build-dependencies]
control-plane-api = { path = "../control-plane-api", optional = true }

[dependencies]
gazette = { path = "../gazette" }
models = { path = "../models" }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
proto-grpc = { path = "../proto-grpc" }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
page-turner = { workspace = true }
postgrest = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
default = []
generate = ["control-plane-api"]
