[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "gazette"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
coroutines = { path = "../coroutines" }
ops = { path = "../ops" }
proto-gazette = { path = "../proto-gazette" }
proto-grpc = { path = "../proto-grpc", features = ["broker_client", "consumer_client"] }
tokens = { path = "../tokens" }

async-compression = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }            # Not directly used, but forces features declared in root Cargo.toml
futures = { workspace = true }
futures-core = { workspace = true }
jsonwebtoken = { workspace = true }
memchr = { workspace = true }
metrics = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# For use with doc parsing (make a feature-flag?).
doc = { path = "../doc" }
pin-project-lite = { workspace = true }
serde_json = { workspace = true }
simd-doc = { path = "../simd-doc" }

[dev-dependencies]

hexdump = { workspace = true }
tracing-subscriber = { workspace = true }
