[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "iam-auth"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
doc = { path = "../doc" }
json = { path = "../json" }

anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sts = { workspace = true }
bytes = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
insta = { workspace = true }
