[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "json"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
addr = { workspace = true }
bigdecimal = { workspace = true }
bitvec = { workspace = true }
iri-string = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
glob = { workspace = true }
insta = { workspace = true }

[[bench]]
harness = false
name = "github_events"

[[bench]]
harness = false
name = "citi_rides"
