[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "labels"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
doc = { path = "../doc" }
json = { path = "../json" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }

percent-encoding = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

insta = { workspace = true }
serde_json = { workspace = true }
