[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "locate-bin"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
which = "4.4.0"
