[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "migrate"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
activate = { path = "../activate" }
assemble = { path = "../assemble" }
automations = { path = "../automations" }
gazette = { path = "../gazette" }
labels = { path = "../labels" }
models = { path = "../models", features = ["sqlx-support"] }
ops = { path = "../ops" }
proto-flow = { path = "../proto-flow" }
proto-gazette = { path = "../proto-gazette" }
proto-grpc = { path = "../proto-grpc" }
tables = { path = "../tables" }
tokens = { path = "../tokens" }

anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
futures = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
build = { path = "../build" }
doc = { path = "../doc" }
extractors = { path = "../extractors" }
tables = { path = "../tables" }

insta = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
