[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "models"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# NOTE(johnny): DO NOT add proto-flow or proto-gazette to this crate.

anyhow = { workspace = true }
async-graphql = { workspace = true, optional = true }
base64 = { workspace = true }
bytes = { workspace = true }
caseless = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true, optional = true }
handlebars = { workspace = true }
humantime-serde = { workspace = true }
indexmap = { workspace = true, optional = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
superslice = { workspace = true }
time = { workspace = true }
unicode-normalization = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
itertools = { workspace = true }
serde_yaml = { workspace = true }

[features]
default = []

async-graphql = ["dep:async-graphql", "dep:futures", "dep:indexmap"]
sqlx-support = ["sqlx"]
