[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "oidc-discovery-server"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
models = { path = "../models" }
ops = { path = "../ops" }

anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
