[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "ops"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proto-flow = { path = "../proto-flow" }

anyhow = { workspace = true }
colored_json = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
